<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inspotle</string>
    <string name="facebook_app_id">721526254602308</string>
    <string name="google_maps_api_key">AIzaSyCNXXm18lsifPipPFE0W8Z1vFWPDAJzvw0</string>

    <string name="title_section1">Activities</string>
    <string name="title_section2">Spots</string>
    <string name="title_section3">Add New Spot</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign out</string>
    <string name="tab_map_name">Map</string>
    <string name="tab_list_name">List</string>
    <string name="tab_info_name">INFO</string>
    <string name="tab_events_name">EVENTS</string>
    <string name="button_create_new_game_label">CREATE NEW GAME</string>
    <string name="create_new_game_tab_map">MAP</string>
    <string name="create_new_game_tab_list">LIST</string>
    <string name="create_new_game_activity_title">CREATE NEW GAME</string>
    <string name="add_new_place_activity_title">ADD NEW PLACE</string>
    <string name="sport">SPORT</string>
    <string name="date">DATE</string>
    <string name="now">Now</string>
    <string name="time">TIME</string>
    <string name="place">PLACE</string>
    <string name="button_bottom_save_game">SAVE GAME</string>
    <string name="name">NAME</string>
    <string name="street">STREET</string>
    <string name="city">CITY</string>
    <string name="desription">DESCRIPTION</string>
    <string name="save_place">SAVE PLACE</string>
    <string name="add_new_spot_here">Add new SPOT here</string>

    <plurals name="numberOfEvents">
        <item quantity="zero">0 events</item>
        <item quantity="one">%d event</item>
        <item quantity="other">%d events</item>
    </plurals>

</resources>
